pod_exec.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-exec
spec:
  containers:
  - name: test-pod
    image: busybox
    command: ["/bin/sh", "-c"]
    args:
      - date; env;
        ping google.com -c 1 && echo "Will die in 10 sec";
        sleep 10;
