nginx-istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nginx-gateway
spec:
  selector:
    istio: ingressgateway # Используем стандартный контроллер Istio
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "nginx-test.k8s-7.sa" # Укажите ваш номер вместо <NUMBER>
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-virtualservice
spec:
  hosts:
  - "nginx-test.k8s-7.sa" # Укажите ваш номер вместо <NUMBER>
  gateways:
  - nginx-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: nginx-service # Имя вашего K8s-сервиса из первого шага
        port:
          number: 80
